force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <label>質問（LWCテスト）</label>
    <pluralLabel>質問（LWCテスト）一覧</pluralLabel>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>質問名</label>
        <type>AutoNumber</type>
    </nameField>
    <description>質問（LWCテスト）起票用のカスタムオブジェクト</description>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>