force-app/main/default/objects/Question__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>内容</label>
    <description>問い合わせの内容</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>