force-app/main/default/objects/Question__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>対応期日</label>
    <description>対応が必要な期日</description>
    <type>Date</type>
</CustomField>