force-app/main/default/objects/Question__c/fields/Reporter__c.field-meta.xml
<CustomField>
    <fullName>Reporter__c</fullName>
    <label>起票者</label>
    <description>問い合わせを起票した担当者</description>
    <type>Text</type>
    <length>255</length>
</CustomField>