force-app/main/default/objects/Question__c/fields/SubmittedDateTime__c.field-meta.xml
<CustomField>
    <fullName>SubmittedDateTime__c</fullName>
    <label>起票日時</label>
    <description>問い合わせの起票日時（自動記入）</description>
    <type>DateTime</type>
</CustomField>