force-app/main/default/objects/Question__c/fields/TargetCustomer__c.field-meta.xml
<CustomField>
    <fullName>TargetCustomer__c</fullName>
    <label>対象顧客</label>
    <description>問い合わせの対象となる顧客</description>
    <type>Text</type>
    <length>255</length>
</CustomField>